--- a/index.html
+++ b/index.html
@@ -9,6 +9,35 @@
   <link rel="stylesheet" href="main.scss">
 </head>
 <body>
+
+  <div class="container">
+
+     <section class="box_one">
+       <div class="header_title">
+         <h2>The Heading 1 </h2>
+       </div>
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit nemo quasi architecto commodi ratione laborum aperiam! Sit cumque eaque mollitia.</p>
+       <img src="./img/pexels-eberhard-grossgasteiger-1624255.jpg" alt="">
+     </section>
+
+     <section class="box_two">
+      <div class="header_title">
+        <h2>The Heading 1 </h2>
+      </div>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit nemo quasi architecto commodi ratione laborum aperiam! Sit cumque eaque mollitia.</p>
+      <img src="./img/pexels-francesco-ungaro-2325446.jpg" alt="">
+    </section>
+
+    <section class="box_three">
+      <div class="header_title">
+        <h2>The Heading 1 </h2>
+      </div>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit nemo quasi architecto commodi ratione laborum aperiam! Sit cumque eaque mollitia.</p>
+      <img src="./img/pexels-gabriela-palai-395196.jpg" alt="">
+    </section>
+  </div>
+
+
   <script src="script.js"></script>
 </body>
 </html>
