--- a/index.html
+++ b/index.html
@@ -15,26 +15,27 @@
 
      <section class="box_one">
        <div class="header_title">
-         <h2>The Heading 1 </h2>
+         <h2 data-aos="fade-left"
+         data-aos-duration="1000">The Heading 1 </h2>
        </div>
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit nemo quasi architecto commodi ratione laborum aperiam! Sit cumque eaque mollitia.</p>
-       <img src="./img/pexels-eberhard-grossgasteiger-1624255.jpg" alt="">
+       <img data-aos="fade-right" data-aos-duration="1000" src="./img/pexels-eberhard-grossgasteiger-1624255.jpg" alt="">
      </section>
 
      <section class="box_two">
       <div class="header_title">
-        <h2>The Heading 1 </h2>
+        <h2 data-aos="fade-left" data-aos-duration="1000">The Heading 1 </h2>
       </div>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit nemo quasi architecto commodi ratione laborum aperiam! Sit cumque eaque mollitia.</p>
-      <img src="./img/pexels-francesco-ungaro-2325446.jpg" alt="">
+      <img data-aos-duration="1000" data-aos="fade-up-left" src="./img/pexels-francesco-ungaro-2325446.jpg" alt="">
     </section>
 
     <section class="box_three">
       <div class="header_title">
-        <h2>The Heading 1 </h2>
+        <h2 data-aos="flip-left" data-aos-duration="1000">The Heading 1 </h2>
       </div>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit nemo quasi architecto commodi ratione laborum aperiam! Sit cumque eaque mollitia.</p>
-      <img src="./img/pexels-gabriela-palai-395196.jpg" alt="">
+      <img data-aos="zoom-in" data-aos-duration="1000" src="./img/pexels-gabriela-palai-395196.jpg" alt="">
     </section>
   </div>
 
@@ -43,6 +44,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
     AOS.init();
-  </script>
+  </script> 
 </body>
 </html>
